--- a/styles/globals.css
+++ b/styles/globals.css
@@ -79,7 +79,7 @@ a {
   font-family: "GraphikRegular";
 }
 /* dialogue */
-.MuiBackdrop-root.css-yiavyu-MuiBackdrop-root-MuiDialog-backdrop {
+/* .MuiBackdrop-root.css-yiavyu-MuiBackdrop-root-MuiDialog-backdrop {
   background-color: rgba(0, 0, 0, 0.9);
 }
 .MuiPaper-root.MuiPaper-elevation.MuiPaper-rounded.MuiPaper-elevation24.MuiDialog-paper.MuiDialog-paperScrollPaper.MuiDialog-paperWidthSm.css-1t1j96h-MuiPaper-root-MuiDialog-paper{
@@ -91,5 +91,14 @@ a {
   align-items: center;
   box-shadow: unset !important;
   border-radius: 32px;
-  /* max-width: 473px; */
+} */
+.css-1t1j96h-MuiPaper-root-MuiDialog-paper{
+  background-color: unset !important;
+  background: transparent !important;
+  background-image: none !important;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: unset !important;
+  border-radius: 32px;
 }
