--- a/styles/globals.css
+++ b/styles/globals.css
@@ -80,9 +80,9 @@ a {
 }
 /* dialogue */
 .MuiBackdrop-root.css-yiavyu-MuiBackdrop-root-MuiDialog-backdrop {
-  background-color: rgba(0, 0, 0, 0.9);
+  background-color: rgba(0, 0, 0, 0.9) !important;
 }
-.MuiPaper-root.MuiPaper-elevation.MuiPaper-rounded.MuiPaper-elevation24.MuiDialog-paper.MuiDialog-paperScrollPaper.MuiDialog-paperWidthSm.css-1t1j96h-MuiPaper-root-MuiDialog-paper{
+/* .MuiPaper-root.MuiPaper-elevation.MuiPaper-rounded.MuiPaper-elevation24.MuiDialog-paper.MuiDialog-paperScrollPaper.MuiDialog-paperWidthSm.css-1t1j96h-MuiPaper-root-MuiDialog-paper{
   background-color: none !important;
   background: transparent !important;
   background-image: none !important;
@@ -92,7 +92,7 @@ a {
   box-shadow: unset !important;
   border-radius: 32px;
 }
-.css-1t1j96h-MuiPaper-root-MuiDialog-paper .ProfileDialogueBox #ProfileDialogueBox{
+.css-1t1j96h-MuiPaper-root-MuiDialog-paper{
   background-color: none !important;
   background: transparent !important;
   background-image: none !important;
@@ -101,4 +101,9 @@ a {
   align-items: center;
   box-shadow: unset !important;
   border-radius: 32px;
+} */
+.MuiDialog-paperScrollPaper {
+  border-radius: 32px !important;
+  max-width: 100vw !important;
+  margin: 0 !important;
 }
