--- a/styles/globals.css
+++ b/styles/globals.css
@@ -107,3 +107,8 @@ a {
   max-width: 100vw !important;
   margin: 0 !important;
 }
+@media screen and (max-width:900px) {
+  .MuiDialog-paperScrollPaper {
+    border-radius: 0px !important;
+  }
+}
