--- a/styles/globals.css
+++ b/styles/globals.css
@@ -104,7 +104,7 @@ a {
 } */
 .MuiDialog-paperScrollPaper {
   border-radius: 32px !important;
-  max-width: 100vw !important;
+  /* max-width: 100vw !important; */
   margin: 0 !important;
 }
 @media screen and (max-width:900px) {
